[package]
authors = ["The Rust Project Developers"]
description = "Numeric syntax extensions"
documentation = "https://docs.rs/num-derive"
homepage = "https://github.com/rust-num/num-derive"
keywords = ["mathematics", "numerics"]
categories = [ "science" ]
license = "MIT/Apache-2.0"
name = "num-derive"
repository = "https://github.com/rust-num/num-derive"
version = "0.2.3"
readme = "README.md"
build = "build.rs"

[dependencies]
proc-macro2 = "0.4.2"
quote = "0.6"
syn = "0.15"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
num = "0.2"

[features]
default = ["std"]
full-syntax = ["syn/full"]
std = ["num-traits/std"]

[lib]
name = "num_derive"
proc-macro = true
test = false
