[package]
authors = ["The Rust Project Developers"]
description = "Numeric syntax extensions"
documentation = "https://docs.rs/num-derive"
homepage = "https://github.com/rust-num/num-derive"
keywords = ["mathematics", "numerics"]
categories = [ "science" ]
license = "MIT/Apache-2.0"
name = "num-derive"
repository = "https://github.com/rust-num/num-derive"
version = "0.2.5"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]

[dependencies]
proc-macro2 = "0.4.2"
quote = "0.6"
syn = "0.15"

[dev-dependencies]
num = "0.2"
num-traits = "0.2"

[features]
full-syntax = ["syn/full"]

[lib]
name = "num_derive"
proc-macro = true
test = false
